Co-authored-by: Clément Coiscaud <ClemCoisc@users.noreply.github.com> Co-authored-by: Quentin GRAMAGE <qgramage@diginamic-formation.fr>

--- a/accompagnement.html
+++ b/accompagnement.html
@@ -75,18 +75,18 @@
             <h2><a href="contact.html" class="titre_contact_card">Vous souhaitez un avis sur votre projet ? Notre expert se déplace gratuitement pour faire une évaluation et une étude de faisabilité</a></h2>
         </div>
         <div class="cards">
-            <div class="card_syndicat">
-                <img src="images/Syndicat.png" alt="logo Syndicat">
-                <div class="contact_button">
-                <h4 class=" contact_titre">Syndicat de copropriété</h4>
-                    <button class="bg_contact"><a href="contact.html">Contactez-nous</a></button>
-                </div>
-            </div>
             <div class="card_particulier">
                 <img src="images/icone_particuliers.png" alt="logo particuliers">
                 <div class="contact_button">
                 <h4 class="contact_titre">Client particulier</h4>
-                    <button class="bg_contact"><a href="contact.html">Contactez-nous</a></button>
+                    <button class="bg_contact"><a href="contact.html#titre_2_id">Contactez-nous</a></button>
+                </div>
+            </div>
+            <div class="card_syndicat">
+                <img src="images/Syndicat.png" alt="logo Syndicat">
+                <div class="contact_button">
+                <h4 class=" contact_titre">Syndicat de copropriété</h4>
+                    <button class="bg_contact"><a href="contact.html#titre_2_id">Contactez-nous</a></button>
                 </div>
             </div>
         </div>
