--- a/index.html
+++ b/index.html
@@ -172,25 +172,25 @@
                 gravida mauris nec, facilisis dapibus sapien.</p>
         
             <div class="section_contact">
+                <div class="section_contact_part">
+                    <img src="images/icone_particuliers.png" alt="icone client particulier">
+                    <div class="section_contact_part_bouton">
+                        <h4 class="part_titre">Client particulier</h3>
+                        <button class="part_bouton"><a href="contact.html#titre_2_id" onclick="displayPartForm()">Contactez-nous</a></button>        
+                    </div>
+                </div>
                 <div class="section_contact_entr">
                     <img src="images/Entreprise.png" alt="Icone entreprise">
                     <div class="section_contact_entr_bouton">
                         <h4 class="entr_titre">Entreprise / Collectivité</h3>
-                        <button class="entr_bouton"><a href="nous_contacter.html">Contactez-nous</a></button>
+                        <button class="entr_bouton"><a href="contact.html#titre_2_id" onclick="displayEntrForm();">Contactez-nous</a></button>
                     </div>
                 </div>
                 <div class="section_contact_synd">
                     <img src="images/Syndicat.png" alt="icone Syndicats de copropriétés">
                     <div class="section_contact_synd_bouton">
                         <h4 class="synd_titre">Syndicat de copropriété</h3>
-                        <button class="synd_bouton"><a href="nous_contacter.html">Contactez-nous</a></button>        
-                    </div>
-                </div>
-                <div class="section_contact_part">
-                    <img src="images/icone_particuliers.png" alt="icone client particulier">
-                    <div class="section_contact_part_bouton">
-                        <h4 class="part_titre">Client particulier</h3>
-                        <button class="part_bouton"><a href="nous_contacter.html">Contactez-nous</a></button>        
+                        <button class="synd_bouton"><a onclick="displaySyndForm()" href="contact.html#titre_2_id">Contactez-nous</a></button>        
                     </div>
                 </div>
             </div>
